# novavisor

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  README.md  novavisor.code-workspace.example
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dma-recovery-soak.yml  mixed-recovery-soak.yml
cmake/: cib_cpm_pin.cmake  clang_tidy.cmake  get_cpm.cmake  nova_guest_project.cmake  nova_helpers.cmake  nova_platform_contract.cmake  pigweed_setup.cmake  toolchain-aarch64.cmake
components/boot_msg/: CMakeLists.txt
components/boot_msg/include/: boot_msg.hpp
components/core_mmu/: CMakeLists.txt
components/core_mmu/include/: core_mmu.hpp  stage2_builder.hpp  stage2_descriptor.hpp
components/core_mmu/src/: core_mmu.cpp
components/core_timer/: CMakeLists.txt
components/core_timer/include/: core_timer.hpp
components/core_timer/src/: core_timer.cpp
components/core_vcpu/: CMakeLists.txt
components/core_vcpu/include/: core_vcpu.hpp
components/core_vcpu/src/: core_vcpu.cpp
components/demo_hvc/: CMakeLists.txt
components/demo_hvc/include/: demo_hvc.hpp
components/demo_hvc/src/: demo_hvc.cpp
components/hal_init/: CMakeLists.txt
components/hal_init/include/: hal_init.hpp
components/idle/: CMakeLists.txt
components/idle/include/: idle.hpp
components/ivc/include/: ivc.hpp
components/nova_panic/: CMakeLists.txt
components/nova_panic/include/: nova_assert.hpp  nova_panic.hpp
components/nova_panic/include/pw_assert_backend/: assert_backend.h  check_backend.h
components/nova_panic/src/: nova_panic.cpp  pw_assert_backend.cc
components/trap_handler/: CMakeLists.txt
components/trap_handler/include/: trap_handler.hpp
components/trap_handler/src/: trap_handler.cpp
components/vgic/include/: vgic.hpp  vgic_model.hpp
configs/: default.yml  dma.yml  large.yml  linux.yml  mixed.yml  payloads.yml  small.yml  zephyr.yml
demo/: CMakeLists.txt  README.md
demo/01_hello/: CMakeLists.txt  main.c  manifest.yml
demo/02_timer/: CMakeLists.txt  main.c  manifest.yml  vectors.S
demo/03_ivc_pingpong/: CMakeLists.txt  manifest.yml  ping.c  pong.c  vectors.S
demo/04_native_gic/: CMakeLists.txt  main.c  manifest.yml  vectors.S
demo/05_preempt/: CMakeLists.txt  main_busy.c  main_sleeper.c  manifest.yml  vectors.S
demo/06_el1_mmu_fp/: CMakeLists.txt  main_fp.c  main_mmu_fp.c  manifest.yml
demo/07_lifecycle/: CMakeLists.txt  main_hang.c  main_reset.c  manifest.yml
demo/08_smp_pingpong/: CMakeLists.txt  main_ping.c  main_pong.c  manifest.yml
demo/09_guest_smp/: CMakeLists.txt  main.c  manifest.yml  vectors.S
demo/10_console_mux/: CMakeLists.txt  console_demo.h  manifest.yml  vectors.S  vm0.c  vm2.c
demo/11_configurable/: CMakeLists.txt  main.c  manifest.yml
demo/12_zephyr/: fetch.sh  manifest.yml  novavisor.overlay
demo/12_zephyr/app/: CMakeLists.txt
demo/12_zephyr/app/src/: main.c
demo/13_linux/: fetch.sh  manifest.yml
demo/14_mixed_recovery/: fetch.sh  manifest.yml
demo/15_dma_isolation/: CMakeLists.txt  main.c  manifest.yml
demo/16_edu_passthrough/: CMakeLists.txt  main.c  manifest.yml  vectors.S
demo/17_edu_dma/: CMakeLists.txt  main.c  manifest.yml
demo/common/: edu_irq_vectors.S  linker.ld  linker.ld.S  secondary.S  startup.S
demo/common/include/: demo_hvc.h  el1_mmu.h  fdt_el1.h  gic_el1.h  guest_psci.h  guest_ring.h  ivc_shm.h  pl011_el1.h
hal/: gic.hpp  timer.hpp
hal/armv8_aarch64/: CMakeLists.txt  boot.S  linker.ld  linker.ld.S  mmu.S  vcpu_enter.S  vec.S
hal/board_qemu_virt/: CMakeLists.txt
hal/board_qemu_virt/include/: board.hpp  board_layout.h  gicv3.hpp  uart.hpp
nova/: esr.hpp  guest.hpp  guest_layout.h  hvc_abi.h  status.hpp  trap_context.hpp  trap_context_offsets.h  types.hpp
novavisor/: esr.hpp  trap_context.hpp  types.hpp
projects/qemu_virt_arm64/: guest_config.cpp  main.cpp  nexus.hpp
projects/qemu_virt_arm64/include/: guest_config.hpp
scripts/: aarch64-gdb.sh  check_fp_free.sh  demo_runner.py  setup_env.sh  task.sh  versions.sh
src/components/boot_msg/: CMakeLists.txt
src/components/console_mux/: CMakeLists.txt
src/components/core_gic/: CMakeLists.txt
src/components/core_timer/: CMakeLists.txt
src/components/core_vcpu/: CMakeLists.txt
src/components/demo_hvc/: CMakeLists.txt
src/components/dma_device/: CMakeLists.txt
src/components/dma_probe/: CMakeLists.txt
src/components/dtb_parser/: CMakeLists.txt
src/components/ivc/: CMakeLists.txt
src/components/nova_panic/: CMakeLists.txt
src/components/psci/: CMakeLists.txt
src/components/smmu/: CMakeLists.txt
src/components/smp/: CMakeLists.txt
src/components/soft_timer/: CMakeLists.txt
src/components/trap_handler/: CMakeLists.txt
src/components/vgic/: CMakeLists.txt
src/components/vuart/: CMakeLists.txt
src/components/watchdog/: CMakeLists.txt
src/hal/: console.hpp  cpu.hpp  dma_device.hpp  dma_probe.hpp  gic.hpp  gic_virt.hpp  mem.hpp  restore_model.hpp  smmu.hpp  timer.hpp
src/hal/arch/aarch64/: CMakeLists.txt  boot.S  cpu.hpp  el1_context.hpp  fp.S  fp.hpp  gic_icc.hpp  gic_ich.hpp  linker.ld.S  mem.cpp  mmu.S  vcpu_enter.S  vec.S
src/hal/armv8_aarch64/: CMakeLists.txt  mmu.S  vcpu_enter.S  vec.S
src/hal/board_qemu_virt/: CMakeLists.txt
src/nova/: esr.hpp  fmt.hpp  guest.hpp  sync.hpp
src/nova/abi/: dma.hpp  edu.h  guest.hpp  guest_layout.h  hvc_abi.h  ivc_ring.h  payload.hpp  psci.h
src/nova/arch/: data_abort.hpp  (+8 more)
src/projects/qemu_virt_arm64/: CMakeLists.txt  guest_config.cpp  main.cpp  nexus.hpp  project.cmake
src/projects/qemu_virt_arm64/include/: guest_config.hpp
tests/host/: data_abort_test.cpp  dma_policy_test.cpp  esr_parse_test.cpp  fmt_test.cpp  gic_spi_test.cpp  payload_test.cpp  pci_test.cpp  restore_model_test.cpp  spin_lock_test.cpp  stage2_builder_test.cpp  stage2_descriptor_test.cpp  vgic_delivery_test.cpp  vgic_model_test.cpp
tests/scripts/: demo_runner_test.py  platform_contract_test.py  yml2dtb_test.py
tools/: check_platform_boundaries.py
tools/yml2dtb/: yml2dtb.py
(+125 files in other folders)
